toList를 불변하지 않은 리스트로 전환